expected/main/gens/primNZBitNonZero-neg-64.err
ERROR: "actual/main/gens/primNZBitNonZero-neg-64.lc", line 3
external nonZero0  {primNZBitNonZero  0} :: Bit  0 -> Maybe (NZBit  0)
         ^
No generated implementation: Argument value 0 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitNonZero-neg-64.lc", line 4
external nonZero1  {primNZBitNonZero  1} :: Bit  1 -> Maybe (NZBit  1)
         ^
No generated implementation: Argument value 1 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitNonZero-neg-64.lc", line 5
external nonZero65 {primNZBitNonZero 65} :: Bit 65 -> Maybe (NZBit 65)
         ^
No generated implementation: Bit vector of width 65 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-64.lc", line 6
external nonZero1K {primNZBitNonZero 1K} :: Bit 1K -> Maybe (NZBit 1K)
         ^
No generated implementation: Argument value 1024 is too large; must be less than 1000

ERROR: "actual/main/gens/primNZBitNonZero-neg-64.lc", line 9
external forget96 {primNZBitForget 96} :: NZBit 96 -> Bit 96
         ^
No generated implementation: Bit vector of width 96 does not fit in a single word

ERROR: Aborting after 5 previously reported errors

